# Speech-To-Text

./: .bandit  .coveragerc  .editorconfig  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CLI_USAGE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  LESSONS_LEARNED.md  Makefile  QUALITY_CHECKLIST.md  README.md  google_api_1.py  google_api_3_return.py  pyproject.toml  pytest.ini  pytest.ini.bak  requirements.txt  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  greetings.yml
legacy/: google_api_1.py  google_api_2.py  google_api_3_return.py
scripts/: setup-dev.sh  verify-setup.py
src/speech_to_text_ai/: __init__.py  __main__.py  cli.py
src/speech_to_text_ai/config/: __init__.py  settings.py
src/speech_to_text_ai/core/: __init__.py  microphone.py  recognizer.py  speaker.py
src/speech_to_text_ai/utils/: __init__.py  logger.py
tests/: __init__.py  test_config.py  test_microphone.py  test_recognizer.py  test_speaker.py
